# matrix-bot

./: .dir-locals.el  .env.example  .gitignore  .pre-commit-config.yaml  README.md  bofa.py  bot.py  nextcloud.py  ollama_client.py  openrouter_client.py  org.py  prometeo.py  pyproject.toml  requirements.txt  settings.py
