[tool.poetry]
name = "matrix-bot"
version = "0.1.0"
description = ""
authors = ["Roger Gonzalez <roger@rogs.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
simplematrixbotlib = "^2.12.0"
validators = "^0.34.0"
wget = "^3.2"
pyexcel-ods3 = "^0.6.1"
python-dotenv = "^1.0.1"
orgparse = "^0.4.20231004"
requests = "^2.32.3"
openai = "0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 121
target-version = ['py37', 'py38', 'py310']
include = '\.pyi?$'
# regex below includes default list from isort, for parity
exclude = '''
/(
    \.bzr
  | \.direnv
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.pants\.d
  | \.svn
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | venv
  | \.idea
  | dockerdata
  | static
)/
'''

[tool.isort]
# these are black-compatible settings
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 121
skip = "dockerdata,.idea,static"
filter_files = true
