[tool.poetry]
name = "matrix-bot"
version = "0.1.0"
description = ""
authors = ["Roger Gonzalez <roger@rogs.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
simplematrixbotlib = "^2.12.0"
validators = "^0.34.0"
wget = "^3.2"
pyexcel-ods3 = "^0.6.1"
python-dotenv = "^1.0.1"
orgparse = "^0.4.20231004"
requests = "^2.32.3"
openai = "0.28"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pre-commit = "^4.0.1"
python-lsp-ruff = "^2.2.2"
python-lsp-server = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__init__.py"
]

line-length = 121
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "PL", "B", "A", "C4", "TID", "ERA", "RET", "W", "C90", "ARG", "Q", "FLY", "SIM", "COM", "D"]
ignore = ["E402", "PLW2901"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
